Fix builds on Java 11 and above
The opendj-core module was using a few classes from JAXB that is not a
part of JDK since version 11.